--- a/indexv2.html
+++ b/indexv2.html
@@ -1,242 +1,196 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh" data-theme="light">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>批量图片压缩工具</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0; padding: 0;
-    background-color: #f0f0f0;
-    color: #222;
-    transition: background-color 0.3s, color 0.3s;
-  }
-  body.dark {
-    background-color: #1e1e1e;
-    color: #eee;
-  }
-  header {
-    padding: 1rem;
-    text-align: center;
-    background-color: #007acc;
-    color: #fff;
-  }
-  main {
-    max-width: 800px;
-    margin: 2rem auto;
-    padding: 1rem;
-    background: #fff;
-    border-radius: 10px;
-  }
-  body.dark main {
-    background: #2c2c2c;
-  }
-  .input-group {
-    display: flex;
-    align-items: center;
-    margin: 1rem 0;
-    gap: 0.5rem;
-  }
-  label {
-    white-space: nowrap;
-  }
-  input[type="number"] {
-    width: 80px;
-  }
-  #dropZone {
-    border: 2px dashed #007acc;
-    padding: 2rem;
-    text-align: center;
-    cursor: pointer;
-    border-radius: 10px;
-    transition: background 0.3s;
-  }
-  #dropZone.dragover {
-    background-color: #e0f0ff;
-  }
-  body.dark #dropZone.dragover {
-    background-color: #444;
-  }
-  button {
-    margin-top: 1rem;
-    padding: 0.5rem 1rem;
-    cursor: pointer;
-  }
-  #installPrompt {
-    display: none;
-    margin-top: 1rem;
-    padding: 1rem;
-    background: #fffae0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>批量图片压缩器</title>
+  <style>
+    :root {
+      --bg-light: #fff;
+      --text-light: #000;
+      --bg-dark: #121212;
+      --text-dark: #f0f0f0;
+      --primary-color: #007bff;
+      --primary-hover: #0069d9;
+    }
+    html[data-theme='dark'] { background: var(--bg-dark); color: var(--text-dark); }
+    html[data-theme='light'] { background: var(--bg-light); color: var(--text-light); }
+    body { font-family: sans-serif; padding: 2em; max-width: 900px; margin: auto; }
+    #dropZone { border: 2px dashed #ccc; padding: 2em; text-align: center; margin-bottom: 1em; border-radius: 10px; background: #f9f9f9; cursor: pointer; }
+    #dropZone.dragover, #dropZone:hover { background-color: #e0f7ff; border-color: var(--primary-color); }
+    .image-row { display: flex; align-items: center; gap: 1em; padding: 1em; margin-bottom: 1em; border: 1px solid #ccc; border-radius: 8px; }
+    .image-col { flex: 1; }
+    .info-col { flex: 2; }
+    .file-name { font-weight: bold; word-break: break-all; margin-bottom: 0.5em; }
+    .size-info { margin-bottom: 0.5em; line-height: 1.5; }
+    .image-preview { max-width: 150px; max-height: 120px; cursor: pointer; }
+    #themeToggle { float: right; cursor: pointer; background: none; border: none; font-size: 1.2em; }
+    #chooseDirBtn { margin: 1em 0; padding: 0.5em 1em; background: var(--primary-color); color: white; border: none; border-radius: 6px; cursor: pointer; }
+  </style>
 </head>
 <body>
-<header>
-  <h1>批量图片压缩工具v1654</h1>
-  <button id="toggleDark">切换深色模式</button>
-</header>
-<main>
+  <h2>📦 图片压缩器 <button id="themeToggle">🌓</button></h2>
+  <p>请拖入包含大小参数的图片文件，如 xxx-160KB.jpg</p>
+  
+  <button id="chooseDirBtn">📁 选择保存目录</button>
+
   <div class="input-group">
-    <label for="forceUseDefault">
-      <input type="checkbox" id="forceUseDefault">
-      手动设置目标大小（KB）
-    </label>
-    <input type="number" id="defaultSizeInput" value="160" min="1" style="display:none;">
+    <label><input type="checkbox" id="forceUseDefault"> 手动设置</label>
+    <input type="number" id="defaultSizeInput" value="160" min="1" style="width:6em; display:none;"> KB
+    <label><input type="checkbox" id="removeParamCheckbox"> 删除文件名参数</label>
   </div>
 
-  <div id="dropZone">拖拽图片或文件夹到这里，或点击选择文件</div>
-  <input type="file" id="fileInput" multiple webkitdirectory style="display:none;">
-  <button id="startCompress">开始压缩</button>
-  <div id="installPrompt">
-    可将此应用安装到桌面：点击浏览器菜单 → 添加到主屏幕
-  </div>
-</main>
+  <div id="dropZone">📂 点击或将图片 / 文件夹拖拽到此区域</div>
+  <input type="file" id="fileInput" accept="image/*" multiple webkitdirectory style="display:none;" />
+  
+  <div id="output"></div>
 
 <script>
-  const dropZone = document.getElementById('dropZone');
-  const fileInput = document.getElementById('fileInput');
-  const startBtn = document.getElementById('startCompress');
-  const forceCheckbox = document.getElementById('forceUseDefault');
-  const defaultSizeInput = document.getElementById('defaultSizeInput');
-  const toggleDarkBtn = document.getElementById('toggleDark');
-  const installPrompt = document.getElementById('installPrompt');
+const dropZone = document.getElementById('dropZone');
+const fileInput = document.getElementById('fileInput');
+const output = document.getElementById('output');
+const defaultSizeInput = document.getElementById('defaultSizeInput');
+const forceUseDefault = document.getElementById('forceUseDefault');
+const removeParamCheckbox = document.getElementById('removeParamCheckbox');
+const themeToggle = document.getElementById('themeToggle');
+const chooseDirBtn = document.getElementById('chooseDirBtn');
 
-  let deferredPrompt;
+let rootDirHandle = null;
 
-  window.addEventListener('beforeinstallprompt', (e) => {
-    e.preventDefault();
-    deferredPrompt = e;
-    installPrompt.style.display = 'block';
-  });
-
-  toggleDarkBtn.addEventListener('click', () => {
-    document.body.classList.toggle('dark');
-  });
-
-  forceCheckbox.addEventListener('change', () => {
-    defaultSizeInput.style.display = forceCheckbox.checked ? 'inline-block' : 'none';
-  });
-
-  dropZone.addEventListener('click', () => fileInput.click());
-
-  dropZone.addEventListener('dragover', e => {
-    e.preventDefault();
-    dropZone.classList.add('dragover');
-  });
-  dropZone.addEventListener('dragleave', e => dropZone.classList.remove('dragover'));
-  dropZone.addEventListener('drop', e => {
-    e.preventDefault();
-    dropZone.classList.remove('dragover');
-    handleFiles([...e.dataTransfer.items]);
-  });
-
-  fileInput.addEventListener('change', e => {
-    handleFiles([...e.target.files]);
-  });
-
-  let allFiles = [];
-
-  async function handleFiles(items) {
-    const files = [];
-    for (const item of items) {
-      let entry;
-      if (item.getAsFileSystemHandle) {
-        entry = await item.getAsFileSystemHandle();
-        await traverseHandle(entry, files);
-      } else if (item.kind === 'file') {
-        files.push(item);
-      }
-    }
-    if (files.length > 0) allFiles = files;
-    alert(`共找到 ${allFiles.length} 个图片文件`);
+async function requestDirectoryAccess() {
+  try {
+    rootDirHandle = await window.showDirectoryPicker();
+    alert("已授权目录：" + rootDirHandle.name);
+  } catch (e) {
+    console.log("目录授权取消", e);
   }
+}
+chooseDirBtn.addEventListener('click', requestDirectoryAccess);
 
-  async function traverseHandle(handle, fileList) {
-    if (handle.kind === 'file') {
-      const file = await handle.getFile();
-      if (file.type.startsWith('image/')) fileList.push({handle, file});
-    } else if (handle.kind === 'directory') {
-      for await (const entry of handle.values()) {
-        await traverseHandle(entry, fileList);
-      }
+forceUseDefault.addEventListener('change', () => {
+  defaultSizeInput.style.display = forceUseDefault.checked ? 'inline-block' : 'none';
+});
+
+function getTargetSizeFromName(name) {
+  const fallback = parseInt(defaultSizeInput.value);
+  if (forceUseDefault.checked) return fallback * 1000;
+  const match = name.match(/-(\d+)KB/i);
+  return match ? parseInt(match[1]) * 1000 : fallback * 1000;
+}
+
+function getCleanFileName(name) {
+  return name.replace(/-\d+KB/i, '');
+}
+
+function dataURLToBlob(dataURL) {
+  const [header, base64] = dataURL.split(',');
+  const mime = header.match(/:(.*?);/)[1];
+  const binary = atob(base64);
+  const array = Uint8Array.from(binary, c => c.charCodeAt(0));
+  return new Blob([array], { type: mime });
+}
+
+async function compressImageToTarget(file, targetSize) {
+  const img = new Image();
+  const reader = new FileReader();
+  reader.readAsDataURL(file);
+  await new Promise(resolve => { reader.onload = () => { img.src = reader.result; img.onload = resolve; }; });
+  const canvas = document.createElement('canvas');
+  canvas.width = img.width; canvas.height = img.height;
+  const ctx = canvas.getContext('2d'); ctx.drawImage(img, 0, 0);
+
+  let low = 0.1, high = 1.0, resultBlob = null;
+  for (let i = 0; i < 10; i++) {
+    const mid = (low + high) / 2;
+    const dataUrl = canvas.toDataURL('image/jpeg', mid);
+    const blob = dataURLToBlob(dataUrl);
+    if (blob.size <= targetSize) { resultBlob = blob; low = mid; } else { high = mid; }
+  }
+  return resultBlob;
+}
+
+async function saveFileToDirectory(fileName, blob) {
+  if (!rootDirHandle) {
+    await requestDirectoryAccess();
+    if (!rootDirHandle) return; // 用户取消
+  }
+  const cleanName = removeParamCheckbox.checked ? getCleanFileName(fileName) : fileName;
+  const fileHandle = await rootDirHandle.getFileHandle(cleanName, { create: true });
+  const writable = await fileHandle.createWritable();
+  await writable.write(blob);
+  await writable.close();
+}
+
+async function handleFiles(files) {
+  for (const file of files) {
+    const row = document.createElement('div'); row.className = 'image-row'; output.appendChild(row);
+    const originalCol = document.createElement('div'); originalCol.className = 'image-col'; row.appendChild(originalCol);
+    const infoCol = document.createElement('div'); infoCol.className = 'info-col'; row.appendChild(infoCol);
+
+    const fileName = document.createElement('div'); fileName.className = 'file-name'; fileName.textContent = file.name;
+    infoCol.appendChild(fileName);
+
+    const targetSize = getTargetSizeFromName(file.name);
+    const originalSizeKB = (file.size / 1024).toFixed(1);
+    if (file.size <= targetSize) {
+      infoCol.innerHTML += `<div class="size-info">原始大小: ${originalSizeKB}KB（小于目标，跳过压缩）</div>`;
+      await saveFileToDirectory(file.name, file);
+      continue;
+    }
+
+    const compressed = await compressImageToTarget(file, targetSize);
+    if (compressed) {
+      const compressedSizeKB = (compressed.size / 1024).toFixed(1);
+      const ratio = ((1 - compressed.size / file.size) * 100).toFixed(1);
+      infoCol.innerHTML += `<div class="size-info">原始: ${originalSizeKB}KB<br>压缩: ${compressedSizeKB}KB<br>压缩率: ${ratio}%</div>`;
+      await saveFileToDirectory(file.name, compressed);
+    } else {
+      infoCol.innerHTML += `<div class="size-info">❌ 压缩失败</div>`;
     }
   }
+}
 
-  async function compressImageToTarget(file, targetSize) {
-    const img = new Image();
-    const reader = new FileReader();
-    reader.readAsDataURL(file);
-
-    await new Promise(resolve => {
-      reader.onload = () => {
-        img.src = reader.result;
-        img.onload = resolve;
-      };
-    });
-
-    const canvas = document.createElement('canvas');
-    canvas.width = img.width;
-    canvas.height = img.height;
-    const ctx = canvas.getContext('2d');
-    ctx.drawImage(img, 0, 0);
-
-    let low = 0.1, high = 1.0;
-    let resultBlob = null;
-
-    for (let i = 0; i < 10; i++) {
-      const mid = (low + high) / 2;
-      const dataUrl = canvas.toDataURL('image/jpeg', mid);
-      const blob = dataURLToBlob(dataUrl);
-      if (blob.size <= targetSize) {
-        resultBlob = blob;
-        low = mid;
+// 拖拽文件/文件夹
+dropZone.addEventListener('dragover', e => { e.preventDefault(); dropZone.classList.add('dragover'); });
+dropZone.addEventListener('dragleave', () => dropZone.classList.remove('dragover'));
+dropZone.addEventListener('drop', e => {
+  e.preventDefault(); dropZone.classList.remove('dragover');
+  const items = e.dataTransfer.items;
+  for (const item of items) {
+    const entry = item.webkitGetAsEntry();
+    if (entry) {
+      if (entry.isDirectory) {
+        if (confirm(`检测到文件夹「${entry.name}」，是否批量处理？`)) {
+          traverseFileTree(entry);
+        }
       } else {
-        high = mid;
+        const file = item.getAsFile();
+        handleFiles([file]);
       }
     }
-    return resultBlob;
   }
+});
+dropZone.addEventListener('click', () => fileInput.click());
+fileInput.addEventListener('change', () => handleFiles(Array.from(fileInput.files)));
 
-  function dataURLToBlob(dataUrl) {
-    const arr = dataUrl.split(',');
-    const mime = arr[0].match(/:(.*?);/)[1];
-    const bstr = atob(arr[1]);
-    let n = bstr.length;
-    const u8arr = new Uint8Array(n);
-    while(n--){
-      u8arr[n] = bstr.charCodeAt(n);
-    }
-    return new Blob([u8arr], {type: mime});
+function traverseFileTree(entry) {
+  if (entry.isFile) {
+    entry.file(file => { handleFiles([file]); });
+  } else if (entry.isDirectory) {
+    const reader = entry.createReader();
+    reader.readEntries(entries => { entries.forEach(ent => traverseFileTree(ent)); });
   }
+}
 
-  startBtn.addEventListener('click', async () => {
-    if (!allFiles || allFiles.length === 0) {
-      alert('请先拖入文件或文件夹');
-      return;
-    }
-
-    const targetKB = forceCheckbox.checked ? parseInt(defaultSizeInput.value) : 160;
-    const targetBytes = targetKB * 1024;
-
-    if (allFiles.length > 100) {
-      const ok = confirm(`检测到 ${allFiles.length} 个文件，是否继续压缩？`);
-      if (!ok) return;
-    }
-
-    for (const item of allFiles) {
-      const {handle, file} = item.handle ? item : {file: item.file, handle: item.handle};
-      const compressedBlob = await compressImageToTarget(file, targetBytes);
-      if (compressedBlob && handle && handle.createWritable) {
-        const writable = await handle.createWritable();
-        await writable.write(compressedBlob);
-        await writable.close();
-      }
-    }
-    alert('批量压缩完成！');
-  });
+// 主题切换
+themeToggle.addEventListener('click', () => {
+  const html = document.documentElement;
+  html.dataset.theme = html.dataset.theme === 'dark' ? 'light' : 'dark';
+  localStorage.setItem('theme', html.dataset.theme);
+});
+if (localStorage.getItem('theme')) {
+  document.documentElement.dataset.theme = localStorage.getItem('theme');
+}
 </script>
 </body>
 </html>
