--- a/pixmix/index.html
+++ b/pixmix/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh">
 <head>
+  <meta charset="UTF-8">
+  <title>图片拼接工具</title>
   <link rel="stylesheet" href="style.css">
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>批量拼接图片 - 自动换行与纵向自适应缩放</title>
 </head>
 <body>
   <button id="theme-toggle">🌙</button>
@@ -27,8 +26,6 @@
       <div id="out"></div>
     </div>
   </div>
-
 <script src="main.js"></script>
-
 </body>
 </html>
