--- a/pixmix/index.html
+++ b/pixmix/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>图片拼接工具</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../pixmix/style.css">
 </head>
 <body>
   <button id="theme-toggle">🌙</button>
@@ -26,6 +26,6 @@
       <div id="out"></div>
     </div>
   </div>
-<script src="./main.js"></script>
+<script src="../pixmix/main.js"></script>
 </body>
 </html>
